--- a/index.html
+++ b/index.html
@@ -6,78 +6,65 @@
     <title>CV</title>
   </head>
   <body>
-    <table  
-      border="1"
-      align="center"
-      rules="rows"
-      style="width:60%;">   
-      <tr>	
-      <td>
- 
-<!--ШАПКА САЙТА-->
-
-    <table class="background" 
-      background="fon.jpg">
-      <tr>	
-        <th>
-          <h1>About myself</h1>    
-        </th> 
-      </tr> 
-    </table>
- 
-<!--ОСНОВНОЙ КОНТЕНТ--> 
-
-    <table 
-      border="2"
-      bgcolor="#e6e6fa" 
-      cellpadding="10" 
-      style="width:100%;  border-radius:5px;">  
-      <tr>	
-      <td 
-	    rowspan="2" 
-	    style="width:80%"> 
-
-    <table class="main" border="1"> 
-      <tr>
-        <th>Item</th>
-        <th>Description</th>
-      </tr>
-      <tr><td>First name</td><td>Dzmitry</td></tr>
-      <tr><td>Last name</td><td>Harunou</td></tr>
-      <tr><td>Phone number</td><td>+375333580842</td></tr>
-      <tr><td>Goals</td><td>
-        - My goal is to gain experience, try to study and comprehend new peaks for myself </td></tr>
-      <tr><td>Skills</td><td>I am working on it so that something can be written in this line</td></tr>
-      <tr><td>Experience</td><td>None, but I hope this is not the final answer</td></tr>
-      <tr><td>Education</td><td>Higher technical</td></tr>
-      <tr><td>English</td><td>Pre-Intermediate</td></tr>
-    </table>
- 
-<!--САЙДБАР-->
- 
-    <td bgcolor="#e6e6fa"> 
-      <h3 align="center">It's me and my main achievement</h3>	   
-        <p>		 
-		  <a href="">
-		  <img src="01.jpg" width="354" alt="Мое фото">
-		  <span style="margin-left:5px;"></span></a>
-		</p> 
-    </td> 
-    </table>
-	
-<!--ПОДВАЛ-->
-
-    <table class="background"
-      background="screen.jpg"> 
-      <tr>
-        <th> 
-          <h3>"Anyone who lives within their means suffer from a lack of imagination"</h3>
-       	  <h4 align="right">Oscar Fingal O'Flahertie Wills Wilde</h4>   
-        </th> 
-      </tr> 
-    </table>  
-      </td>       
-      </tr>  
-    </table>
+    <header class="header">
+    	<nav class="table_header">
+  			<h1>About myself</h1>
+    	</nav>
+    </header>
+    <main class="main">
+    	<section class="cv_info">
+    		<div class="wrapper">
+    			<nav class="left_table"> 
+      				<ul class="column">
+      					<li>Item</li>
+      					<li>First name</li>
+      					<li>Last name</li>
+      					<li>Phone number</li>
+      					<li>Goals</li>
+      					<li>Skills</li>
+      					<li>Experience</li>
+      					<li>Education</li>
+      					<li>English</li>
+      				</ul>
+      				<ul class="column2">
+      					<li>Description</li>
+      					<li>Dzmitry</li>
+      					<li>Harunou</li>
+      					<li>+375333580842</li>
+      					<li>My goal is to gain experience, try to study and comprehend new peaks for myself</li>
+      					<li>I am working on it so that something can be written in this line</li>
+      					<li>None, but I hope this is not the final answer</li>
+      					<li>Higher technical</li>
+      					<li>Pre-Intermediate</li>
+       				</ul>
+    			</nav>
+    			<div class="cv_foto">
+    				<h3>It's me and my main achievement</h3>
+    				<img src="01.jpg" width="450" alt="Me_and_son">
+    			</div>
+    		</div>
+     	</section>
+    </main>
+	<footer class="footer">
+		<div class="quote">
+			<h4>"Anyone who lives within their means suffer from a lack of imagination"</h4>
+       	  <h5>Oscar Fingal O'Flahertie Wills Wilde</h5>
+		</div>     			
+	</footer>     
+  	<div class="footer_link">
+ 		<ul class="footer_link">
+	  		<li class="rs_logo">
+	  			<a href="https://rs.school/js/" class="footer_link"><img src="./logo_rs.svg" alt="rs_logo" class="rs_logo">
+	  			</a>
+	  		</li>
+	  		<li class="yt_link">
+	  			<a href="https://www.youtube.com/watch?v=P88ErIkia98&ab_channel=%D0%A1%D0%BB%D0%B5%D0%B4%D1%83%D0%B9%D0%B7%D0%B0%D0%BC%D0%B5%D1%87%D1%82%D0%BE%D0%B9" class="yt_link"><img src="./yt.svg" alt="yt_link" class="yt_link">
+	  			</a>
+	  		</li>
+	  	</ul> 	
+	</div>
   </body> 
 </html>
+
+
+  
