fix: add code example

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       					<li>Experience</li>
       					<li>Education</li>
       					<li>English</li>
+      					<li>Code example</li>
       				</ul>
       				<ul class="column2">
       					<li>Description</li>
@@ -36,6 +37,11 @@
       					<li>None, but I hope this is not the final answer</li>
       					<li>Higher technical</li>
       					<li>Pre-Intermediate</li>
+      					<li>function century(year){<br>
+      						result = year/100<br>
+      						return Math.ceil (result);<br>
+      						}
+      					</li>
        				</ul>
     			</nav>
     			<div class="cv_foto">
@@ -64,7 +70,4 @@
 	  	</ul> 	
 	</div>
   </body> 
-</html>
-
-
-  
+</html>  
